--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <hr>
             </div>
             <div class="imgbox">
-                <img src="/Portofolio_Homework/assests/images/al.jpg">
+                <img src="/assests/images/al.jpg">
             </div>
             <p id ="firstp"><b>Life is beatiful and still only for people who pursue the dream.</b></p><br>
             <p>My dream is to be a profesional programmer , I know it needs a real </p>
