--- a/portofolio.html
+++ b/portofolio.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Alaa Alhilly</title>
+    <link rel="stylesheet" href="/assests/css/style.css">
 </head>
 <body>
 <div class="nav">
