--- a/index.html
+++ b/index.html
@@ -301,6 +301,9 @@
                     <div class="w-more">
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
+                    <div class="w-more">
+                      <a href="https://alaaalhilly.github.io/Train-Scheduler/" target="_blank"><span class="w-ctegory">Visit</span></a>
+                    </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
@@ -325,7 +328,10 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Word Guess Game</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Oct. 2018</span>
+                    </div>
+                    <div class="w-more">
+                      <a href="https://alaaalhilly.github.io/Word-Guess-Game/" target="_blank"><span class="w-ctegory">Visit</span></a>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -351,7 +357,10 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">LazyGrazer</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">25 Nov. 2018</span>
+                    </div>
+                    <div class="w-more">
+                      <a href="https://teampurple-bootcamp2019.github.io/LazyGrazer/" target="_blank"><span class="w-ctegory">Visit</span></a>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -378,7 +387,10 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Trivia Game</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">25 Oct. 2018</span>
+                    </div>
+                    <div class="w-more">
+                      <a href="https://alaaalhilly.github.io/TriviaGame/" target="_blank"><span class="w-ctegory">Visit</span></a>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -403,9 +415,12 @@
                 <div class="row">
                   <div class="col-sm-8">
                     <h2 class="w-title">Star War Game/h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                    </div>
+                      <div class="w-more">
+                        <span class="w-ctegory">Web Design</span> / <span class="w-date">30 Oct. 2018</span>
+                      </div>
+                      <div class="w-more">
+                        <a href="https://alaaalhilly.github.io/star-wars/" target="_blank"><span class="w-ctegory">Visit</span></a>
+                      </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
@@ -430,7 +445,10 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Gifs Collector</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2017</span>
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">10 Nov. 2017</span>
+                    </div>
+                    <div class="w-more">
+                      <a href="https://alaaalhilly.github.io/GifTastic/" target="_blank"><span class="w-ctegory">Visit</span></a>
                     </div>
                   </div>
                   <div class="col-sm-4">
