--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Star War Game/h2>
+                    <h2 class="w-title">Star War Game</h2>
                       <div class="w-more">
                         <span class="w-ctegory">Web Design</span> / <span class="w-date">30 Oct. 2018</span>
                       </div>
