--- a/index.html
+++ b/index.html
@@ -536,9 +536,9 @@
                   </div>
                   <div class="socials">
                     <ul>
-                      <li><a href="https://www.linkedin.com/in/alaa-al-shammari-979b3b156/"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
-                      <li><a href="https://github.com/AlaaAlhilly"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
-                      <li><a href="https://twitter.com/AlShamm77549307"><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
+                      <li><a href="https://www.linkedin.com/in/alaa-al-shammari-979b3b156/" target="_blank"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
+                      <li><a href="https://github.com/AlaaAlhilly" target="_blank"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
+                      <li><a href="https://twitter.com/AlShamm77549307" target="_blank"><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
                     </ul>
                   </div>
                 </div>
