added github links

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Libraries CSS Files -->
-  <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="lib/animate/animate.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">  <link href="lib/animate/animate.min.css" rel="stylesheet">
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
@@ -92,7 +91,7 @@
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>ALAA AL SHAMMARI</span></p>
                       <p><span class="title-s">Profile: </span> <span>FULL STACK DEVELOPER</span></p>
-                      <p><span class="title-s">Email: </span> <span>alaa.naji.usa@hotmail.com</span></p>
+                      <p><span class="title-s">Email: </span> <span>alaa@alhilly.com</span></p>
                       <p><span class="title-s">Phone: </span> <span>(224) 260-1546</span></p>
                     </div>
                   </div>
@@ -140,7 +139,7 @@
                 <div class="about-me pt-4 pt-md-0">
                   <div class="title-box-2">
                     <h5 class="title-left">
-                      About me
+                      About Me
                     </h5>
                   </div>
                   <p class="lead">
@@ -149,16 +148,7 @@
                      planning, design, development, testing and delivery and maintenance.
                       Proficient with a wide array of scripting languages and multimedia web tools.
                   </p>
-                  <p class="lead">
-                    Apart from being a web developer,
-                     I enjoy most of my time being outdoors. 
-                     In the winter, I am an avid skier and novice ice climber. 
-                     During the warmer months here in Colorado, I enjoy mountain biking,
-                      free climbing, and kayaking.
-                  </p>
-                  <p class="lead">
-                    When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world                  </p>
-                </div>
+                   </div>
               </div>
             </div>
           </div>
@@ -177,7 +167,7 @@
               Services
             </h3>
             <p class="subtitle-a">
-              Things I am pasionate to do :>
+              Things i am passionate about :>
             </p>
             <div class="line-mf"></div>
           </div>
@@ -238,7 +228,7 @@
               <span class="ico-circle"><i class="ion-checkmark-round"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">100</p>
+              <p class="counter">10</p>
               <span class="counter-text">WORKS COMPLETED</span>
             </div>
           </div>
@@ -260,7 +250,7 @@
               <span class="ico-circle"><i class="ion-ios-people"></i></span>
             </div>
             <div class="counter-num">
-              <p class="counter">10</p>
+              <p class="counter">1</p>
               <span class="counter-text">TOTAL CLIENTS</span>
             </div>
           </div>
@@ -279,7 +269,7 @@
               Portfolio
             </h3>
             <p class="subtitle-a">
-              Projects worked in indivisually and within group of developers
+              Projects worked in individually and within group of developers
             </p>
             <div class="line-mf"></div>
           </div>
@@ -302,7 +292,9 @@
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Nov. 2018</span>
                     </div>
                     <div class="w-more">
-                      <a href="https://alaaalhilly.github.io/Train-Scheduler/" target="_blank"><span class="w-ctegory">Visit</span></a>
+                      <a href="https://alaaalhilly.github.io/Train-Scheduler/" target="_blank"><span class="w-ctegory">Demo</span></a>
+                      <a href="https://github.com/AlaaAlhilly/Train-Scheduler" target="_blank"><span class="w-ctegory"><i class="fab fa-github"></i></span></a>
+
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -317,7 +309,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/guess1.png" data-title="HOme Page" data-lightbox="guess">
+            <a href="img/guess1.png" data-title="Home Page" data-lightbox="guess">
               <a href="img/guess2.png" data-title="Win Page" data-lightbox="guess">
                 <a href="img/guess3.png" data-title="Loose Page" data-lightbox="guess">
               <div class="work-img">
@@ -331,7 +323,9 @@
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Oct. 2018</span>
                     </div>
                     <div class="w-more">
-                      <a href="https://alaaalhilly.github.io/Word-Guess-Game/" target="_blank"><span class="w-ctegory">Visit</span></a>
+                      <a href="https://alaaalhilly.github.io/Word-Guess-Game/" target="_blank"><span class="w-ctegory">Demo</span></a>
+                      <a href="https://github.com/AlaaAlhilly/Word-Guess-Game" target="_blank"><span class="w-ctegory"><i class="fab fa-github"></i></span></a>
+
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -346,9 +340,9 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/lazy1.png" data-title="HOme Page" data-lightbox="lazy">
-              <a href="img/lazy2.png" data-title="Win Page" data-lightbox="lazy">
-                <a href="img/lazy3.png" data-title="Loose Page" data-lightbox="lazy">
+            <a href="img/lazy1.png" data-title="Home Page" data-lightbox="lazy">
+              <a href="img/lazy2.png" data-title="searching meals" data-lightbox="lazy">
+                <a href="img/lazy3.png" data-title="videos how to make it" data-lightbox="lazy">
               <div class="work-img">
                 <img src="img/lazy1.png" alt="" class="img-fluid">
               </div>
@@ -360,7 +354,8 @@
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">25 Nov. 2018</span>
                     </div>
                     <div class="w-more">
-                      <a href="https://teampurple-bootcamp2019.github.io/LazyGrazer/" target="_blank"><span class="w-ctegory">Visit</span></a>
+                      <a href="https://teampurple-bootcamp2019.github.io/LazyGrazer/" target="_blank"><span class="w-ctegory">Demo</span></a>
+                      <a href="https://github.com/TeamPurple-BootCamp2019/LazyGrazer" target="_blank"><span class="w-ctegory"><i class="fab fa-github"></i></span></a>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -375,7 +370,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/trivia1.png" data-title="HOme Page" data-lightbox="trivia">
+            <a href="img/trivia1.png" data-title="Home Page" data-lightbox="trivia">
               <a href="img/trivia2.png" data-title="Win Page" data-lightbox="trivia">
                 <a href="img/trivia3.png" data-title="Loose Page" data-lightbox="trivia">
                   <a href="img/trivia4.png" data-title="Loose Page" data-lightbox="trivia">
@@ -390,7 +385,8 @@
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">25 Oct. 2018</span>
                     </div>
                     <div class="w-more">
-                      <a href="https://alaaalhilly.github.io/TriviaGame/" target="_blank"><span class="w-ctegory">Visit</span></a>
+                      <a href="https://alaaalhilly.github.io/TriviaGame/" target="_blank"><span class="w-ctegory">Demo</span></a>
+                      <a href="https://github.com/AlaaAlhilly/TriviaGame" target="_blank"><span class="w-ctegory"><i class="fab fa-github"></i></span></a>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -405,7 +401,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/star1.png" data-title="HOme Page" data-lightbox="starwar">
+            <a href="img/star1.png" data-title="Home Page" data-lightbox="starwar">
               <a href="img/star2.png" data-title="Win Page" data-lightbox="starwar">
                 <a href="img/star3.png" data-title="Loose Page" data-lightbox="starwar">
               <div class="work-img">
@@ -419,7 +415,8 @@
                         <span class="w-ctegory">Web Design</span> / <span class="w-date">30 Oct. 2018</span>
                       </div>
                       <div class="w-more">
-                        <a href="https://alaaalhilly.github.io/star-wars/" target="_blank"><span class="w-ctegory">Visit</span></a>
+                        <a href="https://alaaalhilly.github.io/star-wars/" target="_blank"><span class="w-ctegory">Demo</span></a>
+                      <a href="https://github.com/AlaaAlhilly/star-wars" target="_blank"><span class="w-ctegory"><i class="fab fa-github"></i></span></a>
                       </div>
                   </div>
                   <div class="col-sm-4">
@@ -434,9 +431,9 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/gif1.png" data-title="HOme Page" data-lightbox="gifs">
-              <a href="img/gif2.png" data-title="Win Page" data-lightbox="gifs">
-                <a href="img/gif3.png" data-title="Loose Page" data-lightbox="gifs">
+            <a href="img/gif1.png" data-title="search gig" data-lightbox="gifs">
+              <a href="img/gif2.png" data-title="list of gifs" data-lightbox="gifs">
+                <a href="img/gif3.png" data-title="final result" data-lightbox="gifs">
               <div class="work-img">
                 <img src="img/gif1.png" alt="" class="img-fluid">
               </div>
@@ -448,7 +445,8 @@
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">10 Nov. 2017</span>
                     </div>
                     <div class="w-more">
-                      <a href="https://alaaalhilly.github.io/GifTastic/" target="_blank"><span class="w-ctegory">Visit</span></a>
+                      <a href="https://alaaalhilly.github.io/GifTastic/" target="_blank"><span class="w-ctegory">Demo</span></a>
+                      <a href="https://github.com/AlaaAlhilly/GifTastic" target="_blank"><span class="w-ctegory"><i class="fab fa-github"></i></span></a>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -461,7 +459,65 @@
             </a>
           </div>
         </div>
-        
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="img/hos1.png" data-title="Home page" data-lightbox="hos">
+              <a href="img/hos2.png" data-title="admin panel" data-lightbox="hos">
+                <a href="img/hos3.png" data-title="Delete appointment" data-lightbox="hos">
+              <div class="work-img">
+                <img src="img/hos1.png" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Doctor Appointment</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">19 Dec. 2018</span>
+                    </div>
+                    <div class="w-more">
+                      <a href="http://alhilly.com/doctorapp" target="_blank"><span class="w-ctegory">Demo</span></a>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <span class="ion-ios-plus-outline"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+         <div class="col-md-4">
+          <div class="work-box">
+            <a href="img/auth1.png" data-title="Home page" data-lightbox="auth">
+              <a href="img/auth2.png" data-title="members" data-lightbox="auth">
+                <a href="img/auth3.png" data-title="login" data-lightbox="auth">
+                <a href="img/auth4.png" data-title="sign up" data-lightbox="auth">
+              <div class="work-img">
+                <img src="img/auth1.png" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Authentication System</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">19 Dec. 2018</span>
+                    </div>
+                    <div class="w-more">
+                      <a href="http://alhilly.com/auth" target="_blank"><span class="w-ctegory">Visit</span></a>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <span class="ion-ios-plus-outline"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -479,7 +535,7 @@
                 <div class="col-md-6">
                   <div class="title-box-2">
                     <h5 class="title-left">
-                      Send Me aMessage 
+                      Send Me a Message 
                     </h5>
                   </div>
                   <div>
@@ -531,7 +587,7 @@
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> CHICAGO,ILLINOIS</li>
                       <li><span class="ion-ios-telephone"></span> (224) 260-1546</li>
-                      <li><span class="ion-email"></span> alaa.naji.usa@hotmail.com</li>
+                      <li><span class="ion-email"></span> alaa@alhilly.com</li>
                     </ul>
                   </div>
                   <div class="socials">
